1.2
    - added calculatePowerDetectSomatic
    - added getSexFromVcf
    - added calculateBamCoverageByInterval
    - added calculateGCContentByInterval
    - added bootstrapResults

1.0
    - added correctCoverageBias
    - added getSexFromCoverage
    
0.1.2
    - added PSCBS segmentation function
    - added example data and vignette
    - minor bugfix in findBestNormal if normal database is very small (< 3 samples)
    - removed ExomeCNV dependency