@@ -2,7 +2,7 @@ Package: PureCN
 Type: Package
 Title: Estimating tumor purity, ploidy, LOH, and SNV status using
         hybrid capture sequencing data
-Version: 1.1.13
+Version: 1.1.14
 Date: 2016-05-27
 Author: Markus Riester
 Maintainer: Markus Riester <markus.riester@novartis.com>
