@@ -3,6 +3,8 @@ export(filterVcfBasic)
 export(bootstrapResults)
 export(filterVcfMuTect)
 export(setPriorVcf)
+export(getDiploid)
+export(autoCurateResults)
 export(segmentationCBS)
 export(segmentationPSCBS)
 export(poolCoverage)
