@@ -1,15 +1,21 @@
-.bootstrapResults <- function(results, n=500, top=2) {
+.bootstrapResults <- function(results, n=500, top=2, keep=c()) {
     .bootstrapResult <- function(result) {
-        lliks <- log(apply(result$SNV.posterior$beta.model$likelihoods[!result$SNV.posterior$beta.model$llik.ignored,],1,max))
+        lliks <- log(apply(result$SNV.posterior$beta.model$likelihoods[
+            !result$SNV.posterior$beta.model$llik.ignored,],1,max))
         lliks <- sum(sample(lliks, replace=TRUE))
-        result$log.likelihood + sum(lliks) - sum(result$SNV.posterior$beta.model$llik.ignored)
+        result$log.likelihood + sum(lliks) - 
+            sum(result$SNV.posterior$beta.model$llik.ignored)
     }
-    best <- lapply(1:n, function(i) head(order(sapply(results, .bootstrapResult), decreasing=TRUE), 2))
-    bootstrap.value <- sapply(seq_along(results), function(i) sum(sapply(best, function(x) x[1]==i)))/length(best)
+    best <- lapply(1:n, function(i) head(
+        order(sapply(results, .bootstrapResult), decreasing=TRUE), 2))
+    bootstrap.value <- sapply(seq_along(results), function(i) 
+        sum(sapply(best, function(x) x[1]==i)))/length(best)
+
     for (i in seq_along(results)) {
         results[[i]]$bootstrap.value <- bootstrap.value[i]
     }    
     best <- unlist(best)
+    best <- c(best, keep)
     results[as.numeric(names(sort(table(best),decreasing=TRUE)))]
 }
 
@@ -24,11 +30,16 @@ ret,
 ### Return object of the runAbsoluteCN() function.
 n=500,
 ### Number of bootstrap replicates.
-top=2
+top=2,
 ### Include solution if it appears in the top n solutions of
 ### any bootstrap replicate.
+keep=c()
+### Ids of solutions that should not be removed, even if bootstrap
+### value is low, for example diploid solutions. So this will not remove 
+### the ret$results[keep] solutions.
  ) {
-    r <- .bootstrapResults(ret$results, n=n, top=top)
+    if (class(keep) == "logical") keep <- which(keep)
+    r <- .bootstrapResults(ret$results, n=n, top=top, keep)
     ret$results <- r
     ret
 ### Returns the runAbsoluteCN object with low likelihood solutions
